First commit after a long while away. Working on actor tabs.

--- a/lang/en.json
+++ b/lang/en.json
@@ -227,8 +227,8 @@
 		"Effect": "Effect",
 		"Modifier": "Modifier",
 
-		"Encumbered": "encumbered",
-		"OverMax": "over max",
+		"Encumbered": "Encumbered",
+		"OverMax": "Over Max",
 
 		"Drain": "Drain",
 		"Wear": "Wear",
